--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     </head>
     <body>
         <h1>Jason Spratt's CSCE 190 Site</h1>
+        <a href = "files/Teams - Google Sheets.pdf"><h3>Teams sheet pdf</h3><a/>
 
         <section class="assignment">
             <a href = "files/Data Diddlers CSCE 190 Problem Statement.pdf"><img src="screenshots/Screen Shot 2022-09-03 at 11.51.42 AM.png"><a/>
-            <section claa=""ass-details">
+            <section class=""ass-details">
                 <a href = "files/Data Diddlers CSCE 190 Problem Statement.pdf"><h2>Problem Statement: Roommate Finder</h2><a/>
                 <p>
                     Our users are aggravated because the USC roommate finder is difficult to access and to keep up with. Our solution should provide an easy way to find roommates that are compatible with them.
