--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
         <!-- Problem Statement Assignment-->
         <section class="assignment">
-            <a href = "files/Data Diddlers CSCE 190 Problem Statement.pdf"><img src="screenshots/Screen Shot 2022-09-03 at 11.51.42 AM.png"></a>
+            <a href = "files/Data Diddlers CSCE 190 Problem Statement.pdf"><img src="screenshots/problem-statement.png"></a>
             <section class="ass-details">
                 <a href = "files/Data Diddlers CSCE 190 Problem Statement.pdf"><h2>Problem Statement: Roommate Finder</h2></a>
                 <p>
