--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>CSCE 190: Jason Spratt</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <h1>Jason Spratt's CSCE 190 Site</h1>
