--- a/index.html
+++ b/index.html
@@ -31,5 +31,16 @@
 
             </section>
         </section>
+
+        <!-- Persona Assignment-->
+        <section class="assignment">
+            <a href = "files/Persona.pdf"><img src="screenshots/persona.png"></a>
+            <section class="ass-details">
+                <a href = "files/Persona.pdf"><h2>Persona: 5 Personas for Roommate Finder App</h2></a>
+                <p>
+                    A persona of a typical person who uses an app to find a roommate.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
