--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     </head>
     <body>
         <h1>Jason Spratt's CSCE 190 Site</h1>
+        <!-- comment-->
         <a href = "files/Teams - Google Sheets.pdf"><h3>Teams sheet pdf</h3></a>
 
         <!-- Problem Statement Assignment-->
