--- a/index.html
+++ b/index.html
@@ -43,5 +43,16 @@
                 </p>
             </section>
         </section>
+
+         <!-- Storyboard Assignment-->
+         <section class="assignment">
+            <a href = "files/Story Board Room Buddy.pdf"><img src="screenshots/storyboard.png"></a>
+            <section class="ass-details">
+                <a href = "files/Story Board Room Buddy.pdf"><h2>Room Buddy Storyboard</h2></a>
+                <p>
+                    Stories of various app users and the features they used.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
