--- a/index.html
+++ b/index.html
@@ -54,5 +54,16 @@
                 </p>
             </section>
         </section>
+
+        <!-- Sketch Assignment-->
+        <section class="assignment">
+            <a href = "files/sketches.pdf"><img src="screenshots/sketches.png"></a>
+            <section class="ass-details">
+                <a href = "files/sketches.pdf"><h2>Sketches</h2></a>
+                <p>
+                    Rough sketches of what the app would look like.
+                </p>
+            </section>
+        </section>
     </body>
 </html>
