--- a/index.html
+++ b/index.html
@@ -9,61 +9,61 @@
         <!-- comment-->
         <a href = "files/Teams - Google Sheets.pdf"><h3>Teams sheet pdf</h3></a>
 
-        <!-- Problem Statement Assignment-->
-        <section class="assignment">
-            <a href = "files/Data Diddlers CSCE 190 Problem Statement.pdf"><img src="screenshots/problem-statement.png"></a>
-            <section class="ass-details">
-                <a href = "files/Data Diddlers CSCE 190 Problem Statement.pdf"><h2>Problem Statement: Roommate Finder</h2></a>
-                <p>
-                    Our users are aggravated because the USC roommate finder is difficult to access and to keep up with. Our solution should provide an easy way to find roommates that are compatible with them.
-                </p>
+            <div class="assignments">
+                <!-- Problem Statement Assignment-->
+                <section class="assignment">
+                    <a href = "files/Data Diddlers CSCE 190 Problem Statement.pdf"><h2>Problem Statement: Roommate Finder</h2></a>
+                    <a href = "files/Data Diddlers CSCE 190 Problem Statement.pdf"><img src="screenshots/problem-statement.png"></a>  
+                        <p>
+                            Our users are aggravated because the USC roommate finder is difficult to access and to keep up with. Our solution should provide an easy way to find roommates that are compatible with them.
+                        </p>
+                </section>
 
-            </section>
-        </section>
+                <!-- Affinity Diagram Assignment-->
+                <section class="assignment">
+                    <a href = "files/affinity-diagram.pdf"><h2>Affinity Diagram</h2></a>
+                    <a href = "files/affinity-diagram.pdf"><img src="screenshots/affinity-diagram.png"></a>
+                        <p>
+                            Our group came up with all ideas related to roommates.
+                        </p>
+                </section>
 
-        <!-- Affinity Diagram Assignment-->
-        <section class="assignment">
-            <a href = "files/affinity-diagram.pdf"><img src="screenshots/affinity-diagram.png"></a>
-            <section class="ass-details">
-                <a href = "files/affinity-diagram.pdf"><h2>Affinity Diagram</h2></a>
-                <p>
-                    Our group came up with all ideas related to roommates.
-                </p>
+                <!-- Persona Assignment-->
+                <section class="assignment">
+                    <a href = "files/Persona.pdf"><h2>Persona: 5 Personas for Roommate Finder App</h2></a>
+                    <a href = "files/Persona.pdf"><img src="screenshots/persona.png"></a>
+                        <p>
+                            A persona of a typical person who uses an app to find a roommate.
+                        </p>
+                </section>
 
-            </section>
-        </section>
+                <!-- Storyboard Assignment-->
+                <section class="assignment">
+                    <a href = "files/Story Board Room Buddy.pdf"><h2>Room Buddy Storyboard</h2></a>
+                    <a href = "files/Story Board Room Buddy.pdf"><img src="screenshots/storyboard.png"></a>
+                        <p>
+                            Stories of various app users and the features they used.
+                        </p>
+                </section>
 
-        <!-- Persona Assignment-->
-        <section class="assignment">
-            <a href = "files/Persona.pdf"><img src="screenshots/persona.png"></a>
-            <section class="ass-details">
-                <a href = "files/Persona.pdf"><h2>Persona: 5 Personas for Roommate Finder App</h2></a>
-                <p>
-                    A persona of a typical person who uses an app to find a roommate.
-                </p>
-            </section>
-        </section>
+                <!-- Sketch Assignment-->
+                <section class="assignment">
+                    <a href = "files/sketches.pdf"><h2>Sketches</h2></a>
+                    <a href = "files/sketches.pdf"><img src="screenshots/sketches.png"></a>
+                        <p>
+                            Rough sketches of what the app would look like.
+                        </p>
+                </section>
 
-         <!-- Storyboard Assignment-->
-         <section class="assignment">
-            <a href = "files/Story Board Room Buddy.pdf"><img src="screenshots/storyboard.png"></a>
-            <section class="ass-details">
-                <a href = "files/Story Board Room Buddy.pdf"><h2>Room Buddy Storyboard</h2></a>
-                <p>
-                    Stories of various app users and the features they used.
-                </p>
-            </section>
-        </section>
-
-        <!-- Sketch Assignment-->
-        <section class="assignment">
-            <a href = "files/sketches.pdf"><img src="screenshots/sketches.png"></a>
-            <section class="ass-details">
-                <a href = "files/sketches.pdf"><h2>Sketches</h2></a>
-                <p>
-                    Rough sketches of what the app would look like.
-                </p>
-            </section>
-        </section>
+                <!-- Paper Prototype Assignment-->
+                <section class="assignment">
+                    <a href = "https://youtu.be/1ODyL2PgIdw"><h2>Paper Prototype</h2></a>
+                    <a href = "https://youtu.be/1ODyL2PgIdw"><img src="screenshots/paper-prototype.png"></a> 
+                        <p>
+                            A video describing our app in the form of a paper protoype.
+                        </p>
+                </section>
+            </div>
+        </body>
     </body>
 </html>
