--- a/index.html
+++ b/index.html
@@ -63,6 +63,15 @@
                             A video describing our app in the form of a paper protoype.
                         </p>
                 </section>
+
+                <!-- Low-fi Prototype Assignment-->
+                <section class="assignment">
+                    <a href = "files/low-fi-proto/src/index.html"><h2>Paper Prototype</h2></a>
+                    <a href = "files/low-fi-proto/src/index.html"><img src="screenshots/low-fi.png"></a> 
+                        <p>
+                            A video describing our app in the form of a paper protoype.
+                        </p>
+                </section>
             </div>
         </body>
     </body>
