--- a/index.html
+++ b/index.html
@@ -66,10 +66,10 @@
 
                 <!-- Low-fi Prototype Assignment-->
                 <section class="assignment">
-                    <a href = "files/low-fi-proto/src/index.html"><h2>Paper Prototype</h2></a>
+                    <a href = "files/low-fi-proto/src/index.html"><h2>Low-fi Prototype</h2></a>
                     <a href = "files/low-fi-proto/src/index.html"><img src="screenshots/low-fi.png"></a> 
                         <p>
-                            A video describing our app in the form of a paper protoype.
+                            Interactive prototype of our room buddy app.
                         </p>
                 </section>
             </div>
